# CUDA-CNN-implementation

./: CMakeCache.txt  CMakeLists.txt  Doxyfile  Makefile  cmake_install.cmake  config.h  dataset.py  readme.md
src/baseline_cuda/: main.cu
src/baseline_cuda/kernels/: backward.cu  forward.cu
src/cpu/: dataloader.py  main.py  model.py  test.py  train.py
src/naive/: main.cu
src/naive/kernels/: backward.cu  backward.h  forward.cu  forward.h
src/optimized/: main.cu
src/optimized/kernels/: backward.cu  backward.h  forward.cu  forward.h
src/optimized_cuda/kernels/: backward.h  forward.h
src/utils/: load_data.cu  load_data.h  printing.cu  printing.h
